--- a/project_technologies.json
+++ b/project_technologies.json
@@ -7,7 +7,7 @@
             "insert platforms"
         ],
         "toolkits": [
-            "insert toolkits"
+            "HTML5 Boilerplate"
         ]
     },
     "themes": [
