--- a/project_technologies.json
+++ b/project_technologies.json
@@ -7,7 +7,8 @@
             "insert platforms"
         ],
         "toolkits": [
-            "HTML5 Boilerplate"
+            "HTML5 Boilerplate",
+            "D3.js"
         ]
     },
     "themes": [
